--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^2.1.1",
-    "@mdx-js/react": "^2.1.1",
+    "@fontsource/grape-nuts": "^4.5.1",
+    "@fontsource/open-sans": "^4.5.10",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
+    "@react-icons/all-files": "^4.1.0",
     "gatsby": "^4.14.1",
     "gatsby-plugin-mdx": "^3.14.0",
     "gatsby-plugin-react-helmet": "^5.14.0",
     "gatsby-source-filesystem": "^4.14.0",
+    "gatsby-transformer-remark": "^5.14.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
