--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mdx-js/react": "^1.6.22",
     "@react-icons/all-files": "^4.1.0",
     "gatsby": "^4.14.1",
+    "gatsby-plugin-manifest": "^4.17.0",
     "gatsby-plugin-mdx": "^3.14.0",
     "gatsby-plugin-react-helmet": "^5.14.0",
     "gatsby-source-filesystem": "^4.14.0",
